insurance funnel: Removing unnecessary html tags and styling which corrects the alignment problems and correcting styles accordingly

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -203,7 +203,6 @@ h3 {
       span.threecol.btn:hover {
         background-color: #2541b2;
         border-color: #2541b2;
-        color:white;
       }
 
       span.threecol.btn {
@@ -213,7 +212,6 @@ h3 {
 
       span.threecol.btn.active_selection_card {
         border-color: #2541b2;
-        color:white;
       }
 
       span span {
